--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "popper.js": "^1.14.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "reactstrap": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
