--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "install": "^0.13.0",
     "jquery": "^3.3.1",
     "next": "12.0.10",
     "popper.js": "^1.14.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "reactstrap": "^9.0.1"
+    "reactstrap": "^9.0.1",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "eslint": "8.8.0",
