--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "popper.js": "^1.14.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-headless-tabs": "^4.0.2",
     "react-responsive-carousel": "^3.2.22",
+    "react-tabs": "^3.2.3",
     "reactstrap": "^9.0.1",
     "yarn": "^1.22.17"
   },
