--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bootstrap": "^4.1.3",
     "install": "^0.13.0",
     "jquery": "^3.3.1",
-    "next": "12.0.10",
+    "next": "^12.0.10",
     "popper.js": "^1.14.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
