--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-headless-tabs": "^4.0.2",
+    "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.22",
     "react-tabs": "^3.2.3",
     "reactstrap": "^9.0.1",
