--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^4.1.3",
     "install": "^0.13.0",
     "jquery": "^3.3.1",
